objects/Booking_Availability_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Employee_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Booking Availability Settings</label>
</CustomObject>